fix cards' positioning and customize scrollbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,6 +8,22 @@
     font-family: 'Montserrat', system-ui, sans-serif;
   }
 }
+ 
+@layer utilities {
+  .invisible-scroller {
+    scrollbar-color: grey transparent;
+  }
+  .invisible-scroller::-webkit-scrollbar {
+    width: 0.7rem;
+  }
+  .invisible-scroller::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  .invisible-scroller::-webkit-scrollbar-thumb {
+    border-radius: 1rem;
+    background-color: gray;
+  }
+}
 
 #app {
   @apply bg-slate h-screen text-gray-50;
